fixed animation on ios

--- a/browser/styles.css
+++ b/browser/styles.css
@@ -141,11 +141,14 @@ md-datepicker {
   .md-datepicker-input  {
     font-size: 1.8em;
 }
+}
 @-webkit-keyframes pulse {
-  from {
+  0% {
     background-color: white; }
-  to {
-    background-color: rgba(51, 122, 183, 0.5); } }
+  50% {
+    background-color: rgba(51, 122, 183, 0.5); }
+  100% {
+    background-color: white; }  }
 
 @keyframes pulse {
   0% {
@@ -155,8 +158,20 @@ md-datepicker {
   100% {
     background-color: white; } }
 
+@-moz-keyframes pulse {
+  0% {
+    background-color: white; }
+  50% {
+    background-color: rgba(51, 122, 183, 0.5); }
+  100% {
+    background-color: white; }  }
+
 .usePulse {
   animation-name: pulse;
+  -webkit-animation: pulse 1s infinite;
+  -moz-animation: pulse 1s infinite;
   animation-duration: 1s;
-  animation-iteration-count: infinite;;
-  animation-timing-function: linear; }
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  /*-webkit-animation-timing-function: linear;*/
+}
